# mandelbrot

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  explorer.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrotExplorer.cpp  mandelbrotViewer.cpp  mandelbrotViewer.h  viewer.cpp  viewer.h
